--- a/02-boilerplate-webpack-babel-setup/package.json
+++ b/02-boilerplate-webpack-babel-setup/package.json
@@ -4,7 +4,7 @@
   "description": "A Simple boilerplate project for webpack and babel",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack --watch"
   },
   "author": "SumitK",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "@babel/cli": "^7.18.10",
     "@babel/core": "^7.19.0",
     "@babel/preset-env": "^7.19.0",
+    "babel-loader": "^8.2.5",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
