--- a/04-advance-js/package.json
+++ b/04-advance-js/package.json
@@ -15,5 +15,8 @@
     "babel-loader": "^8.2.5",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "axios": "^0.27.2"
   }
 }
